# Regutrack

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.api  README.md  deploy.ps1  docker-compose.yml  ecosystem.config.js  fix.py  pyproject.toml  requirements.txt  start-local.ps1  verify.py
.agents/skills/deploy-local/: SKILL.md
.agents/workflows/: deploy-local.md  deploy-prod.md
api/: __init__.py  main.py  schemas.py
api/routers/: __init__.py  documents.py  entities.py  runs.py  stats.py
frontend/: next.config.js  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/lib/: api.ts
regutrack/: __init__.py  cli.py  config.py  database.py  models.py  notifier.py  scheduler.py
regutrack/ai/: __init__.py  health_monitor.py  llm_extractor.py  selector_store.py
regutrack/scrapers/: __init__.py  base.py  common.py
regutrack/scrapers/group1_centralizadores/: __init__.py  funcion_publica.py  imprenta_nacional.py  secretaria_juridica.py  sucop.py  suin_juriscol.py
regutrack/scrapers/group2_ministerios/: __init__.py  mineducacion.py  minenergia.py  minhacienda.py  mininterior.py  minjusticia.py  minsalud.py  mintic.py  mintrabajo.py  mintransporte.py  minvivienda.py  presidencia.py
regutrack/scrapers/group3_control/: __init__.py  contraloria.py  dian.py  procuraduria.py  sic.py  superfinanciera.py
regutrack/scrapers/group5_agencias/: ane.py  (+8 more)
regutrack/utils/: hashing.py  http_client.py
scripts/: README.md
tests/: test_database.py  test_hashing.py  test_scrapers_registry.py
(+14 files in other folders)
